--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   equatable: ^2.0.5
   dartz: ^0.10.1
   freezed_annotation: ^2.2.0
+  intl: ^0.18.0
   ## Local Storage Packages ##
   hive: ^2.2.3
   hive_flutter: ^1.1.0
