--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   get_it: ^7.2.0
   logger: ^1.2.2
+  bloc: ^8.1.2
   flutter_bloc: ^8.1.2
+  uuid: ^3.0.7
   path_provider: ^2.0.13
   equatable: ^2.0.5
   dartz: ^0.10.1
